--- a/.gitignore
+++ b/.gitignore
@@ -240,4 +240,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+.vscode
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,windows,linux,macos
