--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Hugo Lara <hugo.alex200197@outlook.com>",
   "license": "MIT",
   "dependencies": {
+    "@hapi/boom": "^10.0.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongodb": "^4.10.0"
