--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/boom": "^10.0.0",
+    "@hapi/joi": "^17.1.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongodb": "^4.10.0"
