--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@hapi/joi": "^17.1.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mongodb": "^4.10.0"
+    "mongodb": "^4.10.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^8.23.0",
