--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "mocha": "^10.0.0",
+    "prettier": "^2.7.1",
+    "proxyquire": "^2.1.3",
+    "sinon": "^14.0.1",
+    "supertest": "^6.3.0"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
