Test for endpoints

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "DEBUG=app:* nodemon index",
     "start": "NODE_ENV=production node index",
+    "test": "mocha --exit",
     "prepare": "husky install"
   },
   "repository": {
